2014-10-04  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (create_menus): Only add tearoffs to empty menus.
	(xg_update_submenu): Remove has_tearoff_p, pass 1 to create_menus
	for add_tearoff_p.

2014-10-04  Martin Rudalics  <rudalics@gmx.at>

	* buffer.c (scroll_bar_width, scroll_bar_height): Fix
	doc-strings.
	* window.c (Fset_window_scroll_bars): Fix doc-string.
	(Fwindow_scroll_bars): Have it return what the doc-string says.

2014-10-03  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_by_lines): Call reseat_1 after moving the
	iterator backwards, to resync the bidi iterator.  (Bug#18584)

2014-10-03  Dmitry Antipov  <dmantipov@yandex.ru>

	Consistently use min and max macros from lisp.h.
	* coding.c (min, max):
	* font.c (MAX):
	* unexhp9k800.c (min):
	* unexw32.c (min, max): Use definitions from lisp.h.
	* regex.c (MAX, MIN) [!emacs]: Define own max and min as such.
	Adjust users.
	* gmalloc.c (min): Tiny style change.

	* fileio.c (emacs_readlinkat, Finsert_file_contents):
	* w32fns.c, xfns.c (x_create_tip_frame): Use AUTO_STRING.

2014-10-03  Paul Eggert  <eggert@cs.ucla.edu>

	Fix x-focus-frame bug with "Not an in-range integer" (Bug#18586).
	* xselect.c (X_SHRT_MAX, X_SHRT_MIN, X_LONG_MAX, X_LONG_MIN)
	(X_ULONG_MAX): Move these macros to xterm.h.
	(x_fill_property_data): Be more generous about allowing either
	signed or unsigned data of the appropriate width.
	* xterm.h (x_display_set_last_user_time): New function.
	All setters of last_user_time changd to use this function.
	If ENABLE_CHECKING, check that the times are in range.

2014-10-02  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (adjust_decode_mode_spec_buffer): Use 'int' instead of
	'ssize_t'.  Suggested by Paul Eggert <eggert@cs.ucla.edu>.

2014-10-02  Jan Djärv  <jan.h.d@swipnet.se>

	* xfaces.c (Finternal_set_lisp_face_attribute): Don't try to
	make a font_object from a tty frame (Bug#18573).
	(Finternal_set_lisp_face_attribute): Add FIXME comment.
