@@ -1,3 +1,8 @@
+2014-10-05  K. Handa  <handa@gnu.org>
+
+	* coding.c (detect_coding_iso_2022): Set coding->rejected
+	correctly when an invalid escape sequence is found (Bug#18610).
+
 2014-10-04  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* gtkutil.c (create_menus): Only add tearoffs to empty menus.
